<resources>
    <string name="app_name">CogTrainingDemo</string>
    <string name="episode_name">Episode %s</string>
    <string name="back_to_characters_list">Back to Characters List</string>
    <string name="episode_number">episode number</string>
    <string name="title_name">title name</string>
    <string name="series_name">series name</string>
    <string name="character_list">character list</string>
    <string name="image_description">Image loading ...</string>
    <string name="add_favourites">Add to favourites</string>
    <string name="title_activity_home">Home</string>
    <string name="title_artists">Artists</string>
    <string name="title_artist">Artist</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_notifications">Notifications</string>
    <string name="potrayed_by">Potrayed </string>
    <string name="category">Category </string>
    <string name="moreinfo">view info</string>
    <string name="title_activity_episode_detail">EpisodeDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="series">Series</string>
    <string name="season">Season</string>
    <string name="air_date">Air date</string>
    <string name="characters">Characters</string>
    <string name="episode">Episode</string>
    <string name="search_hint">Enter character name</string>

</resources>