<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    tools:context=".ui.views.ui.activities.Home">


        <TextView
            android:id="@+id/episode"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/episode_number"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@+id/episode"
            app:layout_constraintStart_toEndOf="@+id/episode"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/series_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/series_name"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/episode"
            app:layout_constraintStart_toEndOf="@+id/episode"
            app:layout_constraintTop_toBottomOf="@id/title_name" />

        <TextView
            android:id="@+id/character_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/character_list"
            android:ellipsize="end"
            android:maxLines="3"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/episode"
            app:layout_constraintStart_toEndOf="@+id/episode"
            app:layout_constraintTop_toBottomOf="@id/series_name" />



</androidx.constraintlayout.widget.ConstraintLayout>
