<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/espisode_lb"
        style="@style/TextDescription"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/episode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/espisode"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/espisode_lb"
        app:layout_constraintStart_toEndOf="@+id/espisode_lb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_lb"
        style="@style/TextDescription"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/espisode_lb"

        />

    <TextView
        android:id="@+id/title"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/title_lb"
        app:layout_constraintStart_toEndOf="@+id/title_lb"
        app:layout_constraintTop_toBottomOf="@id/espisode" />

    <TextView
        android:id="@+id/series_lb"
        style="@style/TextDescription"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/series"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_lb" />

    <TextView
        android:id="@+id/series"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/series_lb"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/season_lb"
        style="@style/TextDescription"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/season"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series_lb" />

    <TextView
        android:id="@+id/season"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/season_lb"
        app:layout_constraintStart_toEndOf="@+id/season_lb"
        app:layout_constraintTop_toBottomOf="@id/series_lb" />

    <TextView
        android:id="@+id/air_date_lb"
        style="@style/TextDescription"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/air_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/season_lb" />

    <TextView
        android:id="@+id/air_date"
        style="@style/TextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/air_date_lb"
        app:layout_constraintStart_toEndOf="@+id/air_date_lb"
        app:layout_constraintTop_toBottomOf="@id/season_lb" />

    <TextView
        android:id="@+id/characterlist_lb"
        style="@style/TextDescription"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/characters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_date_lb" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_date">

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_date" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>